@@ -31,6 +31,7 @@ public class CustomSettings implements Serializable {
 
 	private static final long serialVersionUID = 1L;
 	private boolean showErrors = true; //whether exception details are shown in the user interface
+	private boolean showErrorsApi = true; //whether exception details are shown when making api calls
 	private boolean enableDirectParameterSubstitution = true; //whether direct parameter values in report sql is enabled - instead of using preparedstatements
 	private String exportDirectory; //custom path for export files i.e. for files generated by reports and jobs
 	private String workDirectory; //custom work directory for art files e.g. settings, templates
@@ -41,6 +42,20 @@ public class CustomSettings implements Serializable {
 	private String encryptionKey; //key for symmetric encryption within the application
 	private EncryptionPassword encryptionPassword;
 	private boolean allowRepositoryLogin = true;
+
+	/**
+	 * @return the showErrorsApi
+	 */
+	public boolean isShowErrorsApi() {
+		return showErrorsApi;
+	}
+
+	/**
+	 * @param showErrorsApi the showErrorsApi to set
+	 */
+	public void setShowErrorsApi(boolean showErrorsApi) {
+		this.showErrorsApi = showErrorsApi;
+	}
 
 	/**
 	 * @return the allowRepositoryLogin
