@@ -19,6 +19,7 @@ package art.utils;
 
 import art.enums.ApiStatus;
 import art.general.ApiResponse;
+import art.servlets.Config;
 import java.io.IOException;
 import java.net.URI;
 import javax.servlet.http.HttpServletResponse;
@@ -34,6 +35,7 @@ import org.springframework.http.ResponseEntity;
  * @author Timothy Anyona
  */
 public class ApiHelper {
+	//https://www.baeldung.com/spring-response-entity
 
 	private static final Logger logger = LoggerFactory.getLogger(ApiHelper.class);
 
@@ -45,8 +47,6 @@ public class ApiHelper {
 	 */
 	public static void outputApiResponse(ApiResponse apiResponse,
 			HttpServletResponse response) {
-		
-		//https://www.baeldung.com/spring-response-entity
 
 		try {
 			String jsonString = ArtUtils.objectToJson(apiResponse);
@@ -81,8 +81,13 @@ public class ApiHelper {
 
 		try {
 			ApiResponse apiResponse = new ApiResponse();
+			
 			apiResponse.setHttpStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
 			apiResponse.setArtStatus(ApiStatus.ERROR);
+
+			if (Config.getCustomSettings().isShowErrorsApi()) {
+				apiResponse.setMessage(message);
+			}
 
 			String jsonString = ArtUtils.objectToJson(apiResponse);
 			response.setContentType(MediaType.APPLICATION_JSON_UTF8_VALUE);
@@ -101,6 +106,7 @@ public class ApiHelper {
 	public static void outputNotFoundResponse(HttpServletResponse response) {
 		try {
 			ApiResponse apiResponse = new ApiResponse();
+			
 			apiResponse.setHttpStatus(HttpStatus.NOT_FOUND.value());
 			apiResponse.setArtStatus(ApiStatus.RECORD_NOT_FOUND);
 
@@ -122,6 +128,7 @@ public class ApiHelper {
 	public static void outputOkResponse(HttpServletResponse response, Object data) {
 		try {
 			ApiResponse apiResponse = new ApiResponse();
+			
 			apiResponse.setHttpStatus(HttpStatus.OK.value());
 			apiResponse.setArtStatus(ApiStatus.OK);
 			apiResponse.setData(data);
@@ -154,8 +161,14 @@ public class ApiHelper {
 	 */
 	public static ResponseEntity<ApiResponse> getErrorResponseEntity(String message) {
 		ApiResponse apiResponse = new ApiResponse();
+		
 		apiResponse.setHttpStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
 		apiResponse.setArtStatus(ApiStatus.ERROR);
+
+		if (Config.getCustomSettings().isShowErrorsApi()) {
+			apiResponse.setMessage(message);
+		}
+
 		return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(apiResponse);
 	}
 
@@ -177,9 +190,11 @@ public class ApiHelper {
 	 */
 	public static ResponseEntity<?> getOkResponseEntity(Object data) {
 		ApiResponse apiResponse = new ApiResponse();
+		
 		apiResponse.setHttpStatus(HttpStatus.OK.value());
 		apiResponse.setArtStatus(ApiStatus.OK);
 		apiResponse.setData(data);
+		
 		return ResponseEntity.ok(apiResponse);
 	}
 
@@ -205,9 +220,11 @@ public class ApiHelper {
 			ApiStatus artStatus, String message) {
 
 		ApiResponse apiResponse = new ApiResponse();
+		
 		apiResponse.setHttpStatus(HttpStatus.UNAUTHORIZED.value());
 		apiResponse.setArtStatus(artStatus);
 		apiResponse.setMessage(message);
+		
 		return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(apiResponse);
 	}
 
@@ -231,9 +248,11 @@ public class ApiHelper {
 			String message) {
 
 		ApiResponse apiResponse = new ApiResponse();
+		
 		apiResponse.setHttpStatus(HttpStatus.NOT_FOUND.value());
 		apiResponse.setArtStatus(ApiStatus.RECORD_NOT_FOUND);
 		apiResponse.setMessage(message);
+		
 		return ResponseEntity.status(HttpStatus.NOT_FOUND).body(apiResponse);
 	}
 
@@ -261,10 +280,12 @@ public class ApiHelper {
 			String message, Object data) {
 
 		ApiResponse apiResponse = new ApiResponse();
+		
 		apiResponse.setHttpStatus(HttpStatus.CONFLICT.value());
 		apiResponse.setArtStatus(ApiStatus.LINKED_RECORDS_EXIST);
 		apiResponse.setMessage(message);
 		apiResponse.setData(data);
+		
 		return ResponseEntity.status(HttpStatus.CONFLICT).body(apiResponse);
 	}
 
@@ -290,9 +311,11 @@ public class ApiHelper {
 			Object data) {
 
 		ApiResponse apiResponse = new ApiResponse();
+		
 		apiResponse.setHttpStatus(HttpStatus.CREATED.value());
 		apiResponse.setArtStatus(ApiStatus.OK);
 		apiResponse.setData(data);
+		
 		return ResponseEntity.created(uri).body(apiResponse);
 	}
 
@@ -316,9 +339,11 @@ public class ApiHelper {
 			String message) {
 
 		ApiResponse apiResponse = new ApiResponse();
+		
 		apiResponse.setHttpStatus(HttpStatus.CONFLICT.value());
 		apiResponse.setArtStatus(ApiStatus.RECORD_EXISTS);
 		apiResponse.setMessage(message);
+		
 		return ResponseEntity.status(HttpStatus.CONFLICT).body(apiResponse);
 	}
 
@@ -332,9 +357,11 @@ public class ApiHelper {
 			String message) {
 
 		ApiResponse apiResponse = new ApiResponse();
+		
 		apiResponse.setHttpStatus(HttpStatus.BAD_REQUEST.value());
 		apiResponse.setArtStatus(ApiStatus.INVALID_VALUE);
 		apiResponse.setMessage(message);
+		
 		return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(apiResponse);
 	}
 
